--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Matching Game</title>
+  <title>Pretty Backgrounds</title>
   <meta name="description" content="">
   <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+  <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Indie+Flower">
   <link href="stylesheets/app.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <div class="container">
     <header>
-      <h1>Matching Game</h1>
+      <h1>Pretty Backgrounds</h1>
+      <h3>Match the right backgrounds</h3>
     </header>
-      <section class="score-panel">
-        <ul class="stars">
-          <li><i class="fa fa-star"></i></li>
-          <li><i class="fa fa-star"></i></li>
-          <li><i class="fa fa-star"></i></li>
-        </ul>
-        <span class="moves">0</span> Moves
-        <div class="restart">
-          <i class="fa fa-repeat"></i>
-        </div>
-      </section>
-      <ul class="deck">
-      </ul>
-    </div>
-    <script src="javascripts/app.js"></script>
+    <section class="score-panel">
+      <span class="moves">0</span> Moves
+      <div class="restart">
+        <i class="fa fa-repeat"></i>
+      </div>
+    </section>
+    <ul class="deck">
+    </ul>
+  </div>
+  <div class="pop-up">
+    <h3>Total Moves</h3>
+    <h1 class="moves">0</h1>
+  </div>
+  <script src="javascripts/app.js"></script>
 </body>
 
 </html>
