--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Pretty Backgrounds</title>
+  <title>Matching the Backgrounds</title>
   <meta name="description" content="">
   <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-  <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Indie+Flower">
+  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="stylesheets/app.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <div class="container">
     <header>
-      <h1>Pretty Backgrounds</h1>
-      <h3>Match the right backgrounds</h3>
+      <h1>Match the Backgrounds</h1>
     </header>
     <section class="score-panel">
-      <span class="moves">0</span> Moves
+      <div class="move-meter">
+        <span>Moves</span>
+        <span class="moves">0</span>
+      </div> 
+      <div class="time-meter">
+        <span class="time">0:00</span>
+      </div> 
       <div class="restart">
+        <span>Restart</span>
         <i class="fa fa-repeat"></i>
       </div>
     </section>
