--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <div class="move-meter">
         <span>Moves</span>
         <span class="moves">0</span>
-      </div> 
+      </div>
       <div class="time-meter">
-        <span class="time">0:00</span>
-      </div> 
-      <div class="restart">
+        <span class="time">30</span>
+      </div>
+      <div class="button">
         <span>Restart</span>
         <i class="fa fa-repeat"></i>
       </div>
@@ -31,9 +31,14 @@
     <ul class="deck">
     </ul>
   </div>
-  <div class="pop-up">
-    <h3>Total Moves</h3>
-    <h1 class="moves">0</h1>
+  <div class="container">
+    <div class="pop-up">
+      <h3 class="title">Start Game</h3>
+      <div class="button">
+        <span>Restart</span>
+        <i class="fa fa-repeat"></i>
+      </div>
+    </div>
   </div>
   <script src="javascripts/app.js"></script>
 </body>
