--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
         <span class="moves">0</span>
       </div>
       <div class="time-meter">
-        <span class="time">30</span>
+        <span class="time">60</span>
       </div>
       <div class="button">
         <span>Restart</span>
-        <i class="fa fa-repeat"></i>
       </div>
     </section>
     <ul class="deck">
@@ -33,10 +32,9 @@
   </div>
   <div class="container">
     <div class="pop-up">
-      <h3 class="title">Start Game</h3>
-      <div class="button">
-        <span>Restart</span>
-        <i class="fa fa-repeat"></i>
+      <h3 class="title"></h3>
+      <h2 class="subtitle"></h2>
+      <div class="button" id="game-button">
       </div>
     </div>
   </div>
