--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Matching the Backgrounds</title>
@@ -9,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="stylesheets/app.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
   <div class="container">
     <header>
@@ -17,14 +15,12 @@
     </header>
     <section class="score-panel">
       <div class="move-meter">
-        <span>Moves</span>
+        <span>Moves:</span>
         <span class="moves">0</span>
       </div>
       <div class="time-meter">
+        <span>Time Left:</span>
         <span class="time">60</span>
-      </div>
-      <div class="button">
-        <span>Restart</span>
       </div>
     </section>
     <ul class="deck">
@@ -40,5 +36,4 @@
   </div>
   <script src="javascripts/app.js"></script>
 </body>
-
 </html>
