--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="stylesheets/app.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" type="image/png" href="assets/score/star.png"/>
 </head>
 <body>
   <div class="container">
